Cleanup and format.